# Kung-Fu-Chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  agent_build_out.txt  build_log.txt  kfc.db  test_results_boardlayout.txt  vcpkg.json
.github/workflows/: cmake-single-platform.yml
coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_report/adapters/: board_writer.cpp.func-c.html  board_writer.cpp.func.html  board_writer.cpp.gcov.html  command_processor.cpp.func-c.html  command_processor.cpp.func.html  command_processor.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  vpl_io.cpp.func-c.html  vpl_io.cpp.func.html  vpl_io.cpp.gcov.html
coverage_report/core/: board_model.cpp.func-c.html  board_model.cpp.func.html  board_model.cpp.gcov.html  board_model.h.func-c.html  board_model.h.func.html  board_model.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  piece.cpp.func-c.html  piece.cpp.func.html  piece.cpp.gcov.html  piece_factory.cpp.func-c.html  piece_factory.cpp.func.html  piece_factory.cpp.gcov.html  piece_factory.h.func-c.html  piece_factory.h.func.html  piece_factory.h.gcov.html  piece_token.cpp.func-c.html  piece_token.cpp.func.html  piece_token.cpp.gcov.html  position.cpp.func-c.html  position.cpp.func.html  position.cpp.gcov.html
coverage_report/engine/: game_engine.cpp.func-c.html  game_engine.cpp.func.html  game_engine.cpp.gcov.html  game_engine.h.func-c.html  game_engine.h.func.html  game_engine.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/io/: board_writer.cpp.func-c.html  board_writer.cpp.func.html  board_writer.cpp.gcov.html  command_processor.cpp.func-c.html  command_processor.cpp.func.html  command_processor.cpp.gcov.html  game_input_handler.cpp.func-c.html  game_input_handler.cpp.func.html  game_input_handler.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  vpl_io.cpp.func-c.html  vpl_io.cpp.func.html  vpl_io.cpp.gcov.html
coverage_report/logic/: board_validator.cpp.func-c.html  board_validator.cpp.func.html  board_validator.cpp.gcov.html  collision_resolver.cpp.func-c.html  collision_resolver.cpp.func.html  collision_resolver.cpp.gcov.html  game_rules.cpp.func-c.html  game_rules.cpp.func.html  game_rules.cpp.gcov.html  game_state.cpp.func-c.html  game_state.cpp.func.html  game_state.cpp.gcov.html  game_state.h.func-c.html  game_state.h.func.html  game_state.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move_scheduler.cpp.func-c.html  move_scheduler.cpp.func.html  move_scheduler.cpp.gcov.html  move_validator.cpp.func-c.html  move_validator.cpp.func.html  move_validator.cpp.gcov.html  path_utils.cpp.func-c.html  path_utils.cpp.func.html  path_utils.cpp.gcov.html  real_time_arbiter.cpp.func-c.html  real_time_arbiter.cpp.func.html  real_time_arbiter.cpp.gcov.html  real_time_arbiter.h.func-c.html  real_time_arbiter.h.func.html  real_time_arbiter.h.gcov.html
coverage_report/model/: board_model.cpp.func-c.html  board_model.cpp.func.html  board_model.cpp.gcov.html  board_model.h.func-c.html  board_model.h.func.html  board_model.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  piece.cpp.func-c.html  piece.cpp.func.html  piece.cpp.gcov.html  piece_factory.cpp.func-c.html  piece_factory.cpp.func.html  piece_factory.cpp.gcov.html  piece_factory.h.func-c.html  piece_factory.h.func.html  piece_factory.h.gcov.html  piece_token.cpp.func-c.html  piece_token.cpp.func.html  piece_token.cpp.gcov.html  position.cpp.func-c.html  position.cpp.func.html  position.cpp.gcov.html
coverage_report/realtime/: collision_resolver.cpp.func-c.html  collision_resolver.cpp.func.html  collision_resolver.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move_scheduler.cpp.func-c.html  move_scheduler.cpp.func.html  move_scheduler.cpp.gcov.html  real_time_arbiter.cpp.func-c.html  real_time_arbiter.cpp.func.html  real_time_arbiter.cpp.gcov.html  real_time_arbiter.h.func-c.html  real_time_arbiter.h.func.html  real_time_arbiter.h.gcov.html  render_snapshot.h.func-c.html  render_snapshot.h.func.html  render_snapshot.h.gcov.html
coverage_report/rules/: board_validator.cpp.func-c.html  board_validator.cpp.func.html  board_validator.cpp.gcov.html  game_rules.cpp.func-c.html  game_rules.cpp.func.html  game_rules.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move_validator.cpp.func-c.html  move_validator.cpp.func.html  move_validator.cpp.gcov.html  rules_registry.cpp.func-c.html  rules_registry.cpp.func.html  rules_registry.cpp.gcov.html
coverage_report/ui/: board_view_builder.cpp.func-c.html  board_view_builder.cpp.func.html  board_view_builder.cpp.gcov.html  board_view_model.cpp.func-c.html  board_view_model.cpp.func.html  board_view_model.cpp.gcov.html  headless_renderer.cpp.func-c.html  headless_renderer.cpp.func.html  headless_renderer.cpp.gcov.html  headless_renderer.h.func-c.html  headless_renderer.h.func.html  headless_renderer.h.gcov.html  i_ui_input_sink.h.func-c.html  i_ui_input_sink.h.func.html  i_ui_input_sink.h.gcov.html  i_ui_renderer.h.func-c.html  i_ui_renderer.h.func.html  i_ui_renderer.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ui_controller.cpp.func-c.html  ui_controller.cpp.func.html  (+1 more)
scripts/: run_coverage.sh  setup_opencv.ps1  setup_opencv.sh
src/: board.cpp  board.h  board_model.cpp  board_model.h  board_validator.cpp  board_validator.h  board_writer.h  collision_resolver.cpp  collision_resolver.h  command_processor.cpp  command_processor.h  game_rules.cpp  game_rules.h  game_state.cpp  game_state.h  main.cpp  main_gui.cpp  main_server.cpp  move_scheduler.cpp  move_scheduler.h  move_validator.cpp  move_validator.h  piece.cpp  piece.h  tests.cpp  vpl_io.cpp  vpl_io.h
tests/: board_model_tests.cpp  board_validator_tests.cpp  board_writer_tests.cpp  collision_resolver_tests.cpp  command_processor_tests.cpp  game_rules_tests.cpp  game_state_tests.cpp  integration_test.cpp  move_validator_tests.cpp  path_utils_tests.cpp  piece_tests.cpp  test_helpers.h  vpl_io_tests.cpp
(+300 files in other folders)
